replacing tables with ordered lists.

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43b.htm
@@ -14,61 +14,35 @@ New perspectives</h3>
 this Workbench window:</p>
 <ul>
   <li>
-    Using the Open Perspective button <img align="texttop" border="0" src="../images/Image70_shortcut2.jpg" alt="Open Perspectives">
+    Using the Open Perspective button 
+    <img align="texttop" border="0" src="../images/Image70_shortcut2.jpg" alt="Open Perspectives" width="24" height="25">
     on the shortcut bar.</li>
   <li>
     Choosing a perspective from the Window &gt; Open Perspective menu.&nbsp;</li>
 </ul>
-<table BORDER="0" cellspacing="0" cellpadding="3">
-  <thead>
-  </thead>
-  <tbody>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>1.</b></p>
-      </td>
-      <td valign="top" align="left">
-        <p CLASS="Para">Click on the Open Perspective button <img align="texttop" border="0" src="../images/Image70_shortcut2.jpg" alt="Open Perspectives">.&nbsp;</p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>2.</b></p>
-      </td>
-      <td valign="top" align="left">
+<p>We will open one by using the shortcut bar button.</p>
+<ol>
+  <li>
+        <p CLASS="Para">Click on the Open Perspective button 
+        <img align="texttop" border="0" src="../images/Image70_shortcut2.jpg" alt="Open Perspectives" width="24" height="25">.&nbsp;</p>
+      </li>
+  <li>
         <p CLASS="Head">A menu appears showing the same choices as shown on the
-        Window &gt; Open Perspective menu. Choose Other... from the menu.</p>
+        Window &gt; Open Perspective menu. Choose Other from the menu.</p>
         <blockquote>
-          <p CLASS="Head"><img align="texttop" border="0" src="../images/Image70_shortcut3.jpg" alt="Open Perspective Menu"></p>
+          <p CLASS="Head">
+          <img align="texttop" border="0" src="../images/Image70_shortcut3.jpg" alt="Open Perspective Menu" width="186" height="141"></p>
         </blockquote>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>3.</b></p>
-      </td>
-      <td valign="top" align="left">
+      </li>
+  <li>
         <p CLASS="Para">In the Select Perspective dialog
         choose Debug and click OK.&nbsp;
         <blockquote>
-        <p CLASS="Para"><img align="texttop" border="0" src="../images/Image70_select_pers.jpg" alt="Select Perspective">
-        </blockquote>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>4.</b></p>
-      </td>
-      <td valign="top" align="left">
-        <p CLASS="Para">Observe the Debug perspective is
-        displayed.&nbsp;&nbsp;</p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>5.</b></p>
-      </td>
-      <td valign="top" align="left">
+        <p CLASS="Para">
+        <img align="texttop" border="0" src="../images/Image70_select_pers.jpg" alt="Select Perspective" width="245" height="312"></blockquote>
+        <p CLASS="Para">The Debug perspective is displayed.&nbsp;&nbsp;</p>
+      </li>
+  <li>
         <p CLASS="Para">There are several other
         interesting things to take note of.&nbsp;
         <ul>
@@ -79,23 +53,16 @@ this Workbench window:</p>
             <p CLASS="Para">The shortcut bar now contains two perspectives, the original
             Resource perspective and the new Debug perspective.&nbsp;The Debug perspective button is pressed-in indicating that it is the
             current perspective.<br>
-            <img align="texttop" border="0" src="../images/Image70_shortcut4.jpg" alt="Debug Perspective"></li>
+            <img align="texttop" border="0" src="../images/Image70_shortcut4.jpg" alt="Debug Perspective" width="139" height="183"></li>
         </ul>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>6.</b></p>
-      </td>
-      <td valign="top" align="left">
+      </li>
+  <li>
         <p CLASS="Para">In the shortcut bar, click on the
         Resource perspective button. The Resource perspective is once again our
         current perspective. Notice that the set of views is
         different for each of the perspectives.&nbsp;</p>
-      </td>
-    </tr>
-  </tbody>
-</table>
+      </li>
+</ol>
 <p CLASS="Head">Earlier in this tutorial we created a Navigator fast view by
 dragging the Navigator view onto the shortcut bar.&nbsp; If we do this again we
 will observe that our shortcut bar now has three areas:</p>
@@ -112,9 +79,9 @@ will observe that our shortcut bar now has three areas:</p>
 </ol>
 <blockquote>
   <p CLASS="Head">
-<img align="texttop" border="0" src="../images/Image70_shortcut1.jpg" alt="Resource Perspective">&nbsp;</p>
+<img align="texttop" border="0" src="../images/Image70_shortcut1.jpg" alt="Resource Perspective" width="351" height="368">&nbsp;</p>
 </blockquote>
-<p CLASS="Head">In step 6 above we observed that the set of views are different between the open perspectives. Similarly each perspective has its own
+<p CLASS="Head">In step 5 above we observed that the set of views are different between the open perspectives. Similarly each perspective has its own
 list of fast views.&nbsp;</p>
 <P><a href="qs-43c.htm">
 <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
