--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43f.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43f.htm
@@ -23,69 +23,44 @@ can also control several other key aspects of a perspective. These include:</p>
     action sets that show up on the toolbar</li>
 </ul>
 <p CLASS="Para">Let's try customizing one of these items.&nbsp;</p>
-<table BORDER="0" cellspacing="0" cellpadding="3">
-  <thead>
-  </thead>
-  <tbody>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>1.</b></p>
-      </td>
-      <td valign="top" align="left">
+<ol>
+  <li>
         <p CLASS="Para">In the shortcut bar click on the Resource perspective.&nbsp;</p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>2.</b></td>
-      <td valign="top" align="left">
-        <p CLASS="Para">Select Window &gt; Customize Perspective...&nbsp;</td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>3.</b></p>
-      </td>
-      <td valign="top" align="left">
-        <p CLASS="Para">Expand Other&nbsp;</p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left"><b>4.</b></td>
-      <td valign="top" align="left">Check Launch and click OK.
+      </li>
+  <li>
+        <p CLASS="Para">Select Window &gt; Customize Perspective...&nbsp;</li>
+  <li>
+        <p CLASS="Para">Expand Other.&nbsp;</p>
+      </li>
+  <li>Check Launch and click OK.
         <blockquote>
-          <p><img align="texttop" border="0" src="../images/Image71_pers_customize.jpg" alt="Customizing Perspective" ></p>
+          <p>
+          <img align="texttop" border="0" src="../images/Image71_pers_customize.jpg" alt="Customizing Perspective" width="668" height="449" ></p>
         </blockquote>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left"><b>5.</b></td>
-      <td valign="top" align="left">Observe that the toolbar now
+      </li>
+  <li>Observe that the toolbar now
         includes buttons for debug/run launching.
         <blockquote>
-          <p><img align="texttop" border="0" src="../images/Image71_pers_rundebug.jpg" alt="Customized Perspective" ></p>
+          <p>
+          <img align="texttop" border="0" src="../images/Image71_pers_rundebug.jpg" alt="Customized Perspective" width="361" height="274" ></p>
         </blockquote>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left"><b>6.</b></td>
-      <td valign="top" align="left">When you have finished
+      </li>
+  <li>
+        <p CLASS="Para">When you have finished
         experimenting with the other options on the Customize Perspective dialog choose
         Window &gt; Reset Perspective to return the perspective to its original
-        state.&nbsp;
-      </td>
-    </tr>
-  </tbody>
-</table>
-<P>&nbsp;</P>
+        state.&nbsp; </p>
+      </li>
+</ol>
 
 
 <P><a href="qs-52.htm">
-<img border="0" src="../images/ngnext.gif" alt="Next topic" > 
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12" > 
 Comparing</a>&nbsp;</P>
 
 
 <P><a href="qs-43e.htm">
-<img border="0" src="../images/ngback.gif" alt="Back to previous topic" > 
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12" > 
 Saving perspectives</a></P>
 
 
