--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52e.htm
@@ -14,48 +14,27 @@ Working with the comparison</h3>
 compare editor. In this section we will learn how to use the compare editor to
 resolve the differences between the two files.</p>
 <p>
-<img align="texttop" border="0" src="../images/Image80_compare_editor.jpg" alt="Compare editor"></p>
+<img align="texttop" border="0" src="../images/Image80_compare_editor.jpg" alt="Compare editor" width="532" height="181"></p>
 <p>There are two
 parts to the compare editor's local toolbar. The right group of local toolbar buttons
 (#1) allows you to move to the next or previous change.&nbsp;</p>
 <blockquote>
-<p><img align="texttop" border="0" src="../images/Image80_compare_editor3.jpg" alt="Compare buttons" ></p>
+<p>
+<img align="texttop" border="0" src="../images/Image80_compare_editor3.jpg" alt="Compare buttons" width="148" height="40" ></p>
 </blockquote>
-<table BORDER="0" cellspacing="0" cellpadding="3">
-  <thead>
-  </thead>
-  <tbody>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>1.</b></p>
-      </td>
-      <td valign="top" align="left">
-        <p CLASS="Para">Click the Select Next Change button&nbsp; <img align="texttop" border="0" src="../images/Image80_compare_editor_next.jpg"  alt="Compare editor next button" >.
-        Observe how it selects the next difference.</p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>2.</b></p>
-      </td>
-      <td valign="top" align="left">
+<ol>
+  <li>Click the Select Next Change button&nbsp; 
+  <img align="texttop" border="0" src="../images/Image80_compare_editor_next.jpg"  alt="Compare editor next button" width="16" height="19" >.
+        Observe how it selects the next difference.</li>
+  <li>
         <p CLASS="Para">Click Select Next
         Change button a second time to go to the next change.&nbsp;</p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para">
-        <b>3.</b>
-        </p>
-      </td>
-      <td valign="top" align="left">
+      </li>
+  <li>
         <p CLASS="Para">Click the Select Previous Change
         button.</p>
-      </td>
-    </tr>
-  </tbody>
-</table>
+      </li>
+</ol>
 <p>The left group of local toolbar buttons (see #2) allows you to merge changes from the left file to the
 right file and vice versa. There are four types of merges you can perform:</p>
 <ul>
@@ -70,55 +49,35 @@ on either the left or right can just be replaced by the contents of the other
 file.</p>
 <p>
 The Copy current change buttons allow you to merge a single change.&nbsp;&nbsp;</p>
-<table BORDER="0" cellspacing="0" cellpadding="3">
-  <thead>
-  </thead>
-  <tbody>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>1.</b></p>
-      </td>
-      <td valign="top" align="left">
+<ol>
+  <li>
         <p CLASS="Para">Ensure that the second difference is selected (as shown
         below):</p>
-        <p CLASS="Para"><img align="texttop" border="0" src="../images/Image80_compare_change2.jpg" alt="Compare editor" ></p>
-        <p CLASS="Para"></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>2.</b></p>
-      </td>
-      <td valign="top" align="left">
+        <p CLASS="Para">
+        <img align="texttop" border="0" src="../images/Image80_compare_change2.jpg" alt="Compare editor" width="446" height="155" ></p>
+        </li>
+  <li>
         <p CLASS="Para">Click&nbsp;Copy
         current change from right to
-        left <img align="texttop" border="0" src="../images/Image80_compare_rl.jpg"  alt="Compare editor right to left button" >
+        left 
+        <img align="texttop" border="0" src="../images/Image80_compare_rl.jpg"  alt="Compare editor right to left button" width="20" height="19" >
         button. Observe
         that the selected text from the right file is copied to the left file.
         <p CLASS="Para"><img align="texttop" border="0" src="../images/Image80_compare_after.jpg" alt="Compare editor" width="448" height="149" ></p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para">
-        <b>3.</b>
-        </p>
-      </td>
-      <td valign="top" align="left">
+      </li>
+  <li>
         <p CLASS="Para">Close the compare editor and
         choose Yes to save the changes. Alternatively you can save the changes
         by choosing File &gt; Save (Ctrl+S).&nbsp;</p>
-      </td>
-    </tr>
-  </tbody>
-</table>
+      </li>
+</ol>
 <P><a href="qs-55.htm">
-<img border="0" src="../images/ngnext.gif" alt="Next topic" > 
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12" > 
 Local history</a>&nbsp;</P>
 
 
 <P><a href="qs-52d.htm">
-<img border="0" src="../images/ngback.gif" alt="Back to previous topic" > 
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12" > 
 Understanding the comparison</a></P>
 
 
