--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61c_offline.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61c_offline.htm
@@ -9,39 +9,18 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 
-<DIV CLASS="Subtopic">
 <h2>Starting offline</h2>
   <P CLASS="Para">We will start our team CVS tutorial by working offline and creating 
     a simple project. Once the project is made we will see how to release it to 
     the repository.&nbsp;</P>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3" width="616">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" width="13" align="left">
-<b>1.</b>
-</TD>
-<TD valign="top" width="587" align="left">
-Create a new &quot;Simple&quot; project using File &gt; New &gt; Project.... Use
+<ol>
+  <li>
+  <P CLASS="Para">Create a new &quot;Simple&quot; project using File &gt; New &gt; Project.... Use
 your name as the project
-name (e.g. JanesTeamProject).&nbsp;
-</TD>
-</TR>
-<TR>
-<TD valign="top" width="13" align="left">
-<b>2.</b>
-</TD>
-<TD valign="top" width="587" align="left">
-Create a folder named folder1.
-</TD>
-</TR>
-<TR>
-<TD valign="top" width="13" align="left">
-<b>3.</b>
-</TD>
-<TD valign="top" width="587" align="left">
-Create two text files (.txt) in folder1 called&nbsp; file1.txt and file2.txt.
+name (e.g. JanesTeamProject).&nbsp; </P>
+  </li>
+  <li>Create a folder named folder1. </li>
+  <li>Create two text files (.txt) in folder1 called&nbsp; file1.txt and file2.txt.
 Their contents should be as follows:
 <p>file1.txt</p>
 <blockquote>
@@ -58,14 +37,11 @@ Their contents should be as follows:
   <p>
   <img align="texttop" border="0" src="../images/Image82_nav.jpg" alt="Navigator view" width="206" height="154"></p>
 </blockquote>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
-</DIV>
+  </li>
+</ol>
 
 
-<P>&nbsp;We can continue to work with our project in this mode but unless we commit 
+<P>We can continue to work with our project in this mode but unless we commit 
   the project into the repository others on our team will be unable to work on 
   the project with us. In the next few sections we will see how to commit our 
   project to the&nbsp; repository. </P>
