--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61d_repolocb.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61d_repolocb.htm
@@ -12,26 +12,12 @@
 Specifying a repository location</h3>
 <p CLASS="Head">Before we can share our project with other users we must first
 specify an available repository.</p>
-<DIV CLASS="Subtopic">
-
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<b>1.</b>
-</TD>
-      <TD valign="top" align="left"> Open the CVS Repository Browsing perspective. 
+<ol>
+  <li>Open the CVS Repository Browsing perspective. 
         The top left view shows all of the CVS repositories that we are currently 
         working with. As you can see, the view is empty, meaning we still need 
-        to specify a repository. </TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>2.</b>
-</TD>
-      <TD valign="top" align="left"> In the context menu of the CVS Repositories 
+        to specify a repository. </li>
+  <li>In the context menu of the CVS Repositories 
         view choose New &gt;&nbsp;Repository Location... 
         <blockquote> 
           <blockquote> 
@@ -39,122 +25,53 @@ specify an available repository.</p>
             <img align="texttop" border="0" src="../images/Image82_repo_new.jpg" alt="CVS Repositories view" width="496" height="137"></p>
           </blockquote>
         </blockquote>
-        <blockquote> 
-          <blockquote>&nbsp;</blockquote>
-        </blockquote>
-      </TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-In the CVS Repository Location wizard we need to fill in the location of our
+        </li>
+  <li>In the CVS Repository Location wizard we need to fill in the location of our
 repository and our login information. You may require assistance from your
 repository administrator in order to fill in the necessary information.
 <blockquote>
   <p>
   <img align="texttop" border="0" src="../images/Image82_repo_new3.jpg" alt="Add CVS Repository dialog" width="437" height="461"></p>
 </blockquote>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>4.</b>
-</P>
-</TD>
-      <TD valign="top" align="left"> 
+  </li>
+  <li> 
         <P CLASS="Para"> In the <i> Host </i> field, type the address of the host 
           (e.g., &quot;teamsamples.com&quot;).</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>5.</b>
-</P>
-</TD>
-      <TD valign="top" align="left"> 
+  </li>
+  <li> 
         <P CLASS="Para"> In the <i> Repository path </i> field, type the path 
           for the repository at the host address (e.g., &quot;/home/cvsroot/repositoryName&quot;).</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>6.</b>
-</P>
-</TD>
-      <TD valign="top" align="left"> 
+  </li>
+  <li> 
         <P CLASS="Para">In the <i> User </i> field, type the user name under which 
           you want to connect.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>7.</b>
-</P>
-</TD>
-      <TD valign="top" align="left"> 
+  </li>
+  <li> 
         <P CLASS="Para">In the <i>Password</i> field, type your password.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>8.</b>
-</P>
-</TD>
-      <TD valign="top" align="left"> 
+  </li>
+  <li> 
         <P CLASS="Para"> In the <i> Connection type </i> field, select the type 
           of CVS connection for the repository.&nbsp; Choose pserver. </P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>9.</b>
-</TD>
-      <TD valign="top" align="left">
+  </li>
+  <li>
 	  <P CLASS="Para"> Leave<i> Use Default Port</i> enabled.&nbsp;</P> 
-      </TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>10.</b>
-</TD>
-      <TD valign="top" align="left"> By default the <i>Validate location on finish<b> 
-        </b></i>is checked.&nbsp; </TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-        <P CLASS="Para"> <b>11.</b> </P>
-</TD>
-<TD valign="top" align="left">
+      </li>
+  <li>By default the <i>Validate location on finish<b> 
+        </b></i>is checked.&nbsp; </li>
+  <li>
 <P CLASS="Para">
 Click Finish when you are done.</P>
 <P CLASS="Para">
 Since we checked <i>Validate location on finish, </i>the wizard will now attempt to
 validate the information by connecting to the repository. In doing so it may prompt you for your password.
 Note that the repository connection is only used to validate the information.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-        <P CLASS="Para"> <b>12.</b> </P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">Observe that the Repositories view now shows the new repository location.</P>
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/Image82_repo_view1.jpg" alt="CVS Repositories view" width="314" height="81"></P>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
-</DIV>
+  </li>
+</ol>
 
 <P><a href="qs-61e_whatisloc.htm">
 <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
