--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61f_syncproject.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61f_syncproject.htm
@@ -12,77 +12,34 @@
 <P CLASS="Para">
 We have created our project and specified our repository location. Now we need
 to make our project available to other team members.</P>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+<ol>
+  <li>
 <P CLASS="Para">
 In the Navigator view select the project JanesTeamProject.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-2.</b>
-</P>
-</TD>
-    <TD valign="top" align="left"> 
+  </li>
+  <li> 
       <P CLASS="Para">From the project's context menu choose Team &gt; Share Project. 
         If you have more than one repository provider installed, pick CVS and 
         press Next. Select the location we created previously.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-3.</b>
-</P>
-</TD>
-    <TD valign="top" align="left"> 
+  </li>
+  <li> 
       <P CLASS="Para"> In the sharing wizard page, select the location we created 
         previously.</P>
 <blockquote>
   <p><img align="texttop" border="0" src="../images/Image82_repo_sync1.jpg" width="435" height="438" alt="Set Project Sharing"></p>
 </blockquote>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-4.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
       <P CLASS="Para"> Click Finish when you are done.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>5.</b>
-</TD>
-    <TD valign="top" align="left"> Observe that the Synchronize view automatically 
+  </li>
+  <li>Observe that the Synchronize view automatically 
       opens. In the next section we will see how to use this view to release our 
       work to the repository. 
       <blockquote> 
   <p><img align="texttop" border="0" src="../images/Image82_repo_team.jpg" width="545" height="506" alt="Team Perspective"></p>
 </blockquote>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
-
-<P>&nbsp;</P>
+  </li>
+</ol>
 
 
 <P><a href="qs-62b_sync.htm">
