--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62c_releasing.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62c_releasing.htm
@@ -15,125 +15,58 @@ ahead and commit the work we have done.
 </P>
 
 
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+<ol>
+  <li>
 <P CLASS="Para">
 In the Structured Compare list select file1.txt</P>
 <blockquote>
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/Image82_repo_release.jpg"  alt="Structure Compare" width="236" height="136"></P>
 </blockquote>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Popup the menu and choose Commit. Click OK when asked to supply a commit
 comment.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-Observe that file1.txt is no longer in the list.
+  </li>
+  <li>Observe that file1.txt is no longer in the list.
 <blockquote>
   <p><img align="texttop" border="0" src="../images/Image82_repo_release2.jpg"  alt="Structure Compare" width="214" height="138"></p>
 </blockquote>
   <p>In addition to committing individual resources we can also select
 the project and commit all of the changes in the project.</p>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>4.</b>
-</TD>
-<TD valign="top" align="left">
-Select JanesTeamProject.
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>5.</b>
-</TD>
-<TD valign="top" align="left">
-Choose Commit from the project's context menu and type in &quot;my first
+  </li>
+  <li>Select JanesTeamProject. </li>
+  <li>Choose Commit from the project's context menu and type in &quot;my first
 project&quot; when prompted for a commit comment.
 <p>Observe that the remaining resources in the project are committed and the
 structure compare list is now empty.&nbsp;</p>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>6.</b>
-</TD>
-<TD valign="top" align="left">
-Click on the Resource perspective button in the shortcut bar (at the far left of
+  </li>
+  <li>Click on the Resource perspective button in the shortcut bar (at the far left of
 the window).
 <blockquote>
   <blockquote>
     <p><img align="texttop" border="0" src="../images/Image82_repo_res.jpg"  alt="Resource Perspective" width="110" height="125"></p>
   </blockquote>
 </blockquote>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>7.</b>
-</TD>
-<TD valign="top" align="left">
-In the navigator create a third file called file3.txt with the following
+  </li>
+  <li>In the navigator create a third file called file3.txt with the following
 contents:
 <blockquote>
   <p><i>This is the brief contents<br>
   of file 3.</i></p>
 </blockquote>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>8.</b>
-</TD>
-<TD valign="top" align="left">
-Select the project (JanesTeamProject) and choose Team &gt; Synchronize with
+  </li>
+  <li>Select the project (JanesTeamProject) and choose Team &gt; Synchronize with
 Repository again from the context menu.
 <p>When the
 Synchronize view opens, there is only one change, the new file3.txt.</p>
 <blockquote>
   <p><img align="texttop" border="0" src="../images/Image82_repo_rel5.jpg" alt="Release mode" width="409" height="169"></p>
 </blockquote>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>9.</b>
-</TD>
-<TD valign="top" align="left">
-Select file3.txt, and choose Commit from the context menu.
-</TD>
-</TR>
-</TBODY>
-</TABLE>
+  </li>
+  <li>Select file3.txt, and choose Commit from the context menu. </li>
+</ol>
 <P><a href="qs-64a_another.htm">
 <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
 Working with another user</a>&nbsp;</P>
