--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64b_fredadd.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64b_fredadd.htm
@@ -16,49 +16,21 @@
   <li>Fred will synchronize and commit his outgoing changes to the two files.</li>
 </ul>
 <p>Fred's first step is to add the project to his workspace as follows:</p>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-    <TD valign="top" align="left"> In the CVS Repositories view context menu choose 
+<ol>
+  <li>In the CVS Repositories view context menu choose 
       New &gt;&nbsp; Repository Location... 
       <blockquote>
   <blockquote>
     <p><img align="texttop" border="0" src="../images/Image82_repo_new.jpg" alt="Context menu" width="496" height="137" ></p>
   </blockquote>
 </blockquote>
-<P CLASS="Para">&nbsp;
-</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <p CLASS="Para">
 In the CVS Repository Location wizard fill in the same repository location that
 Jane filled in.
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
       <P CLASS="Para">In the CS Repositories view expand the repository location, 
         then expand HEAD.</P>
 <P CLASS="Para">Under HEAD you should see the project (JanesTeamProject) that
@@ -68,41 +40,21 @@ Jane created.</P>
     <P CLASS="Para"><img align="texttop" border="0" src="../images/Image83_fred1.jpg" alt="Repositories View" width="277" height="240"></P>
   </blockquote>
 </blockquote>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>4.</b>
-</TD>
-<TD valign="top" align="left">
-Expand folder1 and you should see the three files that Jane created.
+  </li>
+  <li>Expand folder1 and you should see the three files that Jane created.
 <blockquote>
   <p><img align="texttop" border="0" src="../images/Image83_fred2.jpg" alt="Repositories View" width="278" height="288" ></p>
 </blockquote>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>5.</b>
-</TD>
-    <TD valign="top" align="left"> Select the project and choose Checkout as Project 
+  </li>
+  <li>Select the project and choose Checkout as Project 
       from the context menu. 
       <blockquote>
   <p><img align="texttop" border="0" src="../images/Image83_fred3_add.jpg" alt="Add to Workspace" width="392" height="368"></p>
 </blockquote>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>6.</b>
-</TD>
-<TD valign="top" align="left">
-Select the Navigator view and observe&nbsp; that it now includes the project
-JanesTeamProject.
-</TD>
-</TR>
-</TBODY>
-</TABLE>
+  </li>
+  <li>Select the Navigator view and observe&nbsp; that it now includes the project
+JanesTeamProject. </li>
+</ol>
 <P><a href="qs-64b_fredmod.htm">
 <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
 Another user making changes</a>&nbsp;</P>
