--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_mod.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_mod.htm
@@ -14,16 +14,8 @@ Making our own changes</h3>
   them to the repository. We now need to make some changes for ourself and&nbsp; 
   then synchronize with the repository. When we synchronize we expect to see the 
   changes we have made along with changes that have been made by Fred.</p>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<b>1.</b>
-</TD>
-<TD valign="top" align="left">
-Start by modifying file2.txt as follows
+<ol>
+  <li>Start by modifying file2.txt as follows
 <p>Original Contents:</p>
 <blockquote>
   <p><i>File2 is a <b>Jane-update </b>small file<br>
@@ -34,14 +26,8 @@ Start by modifying file2.txt as follows
     <p><i>This is the <b>Jane-update </b>contents<br>
     of file 2.&nbsp;</i></p>
 </blockquote>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>2.</b>
-</TD>
-<TD valign="top" align="left">
-Modify file3.txt as follows
+  </li>
+  <li>Modify file3.txt as follows
 <p>Original Contents:</p>
 <blockquote>
   <p><i>This is the brief contents<br>
@@ -52,83 +38,42 @@ Modify file3.txt as follows
   <p><i>This is the brief contents<br>
   of file <b>(Jane was here) </b>3</i></p>
 </blockquote>
-<p>&nbsp;
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>3.</b>
-</TD>
-    <TD valign="top" align="left"> 
-      <P CLASS="Para">Open the preferences (Window &gt; Preferences) and turn 
-        on the CVS label decorations (on page Workbench &gt; Label Decorations 
-        and ensure CVS is checked).</P>
+  </li>
+  <li> 
+      <P CLASS="Para">Open the preferences (Window &gt; Preferences) and turn on 
+      the CVS label decorations (on page Workbench &gt; Label Decorations and 
+      ensure CVS is checked).</P>
 <blockquote>
   <P CLASS="Para"><img align="texttop" border="0" src="../images/Image84_decorator_preference.jpg" alt="Navigator View" width="605" height="529" ></P>
 </blockquote>
-      <P CLASS="Para">Observe that the Navigator updates to show the CVS state of a 
-        resource. Notice that the two files which Fred has changed are preceded 
-        by &quot;&gt;&quot;.</P>
+      <P CLASS="Para">Observe that the Navigator updates to show the CVS state 
+      of a resource. Notice that the two files which Fred has changed are 
+      preceded by &quot;&gt;&quot;.</P>
 <blockquote>
-  <P CLASS="Para"><img align="texttop" border="0" src="../images/Image83_jane1.jpg" alt="Navigator View" width="236" height="160" >&nbsp;</P>
+  <P CLASS="Para"><img align="texttop" border="0" src="../images/Image83_jane1.jpg" alt="Navigator View" width="236" height="160" ></P>
 </blockquote>
-<p>&nbsp;
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>4.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Select the project (JanesTeamProject)</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>5.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
       <P CLASS="Para"> From the project's context menu, select Team &gt; Synchronize 
         with Repository.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>6.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-      <p>There are couple of other things worth observing. First, the icon next 
+  </li>
+  <li>There are couple of other things worth observing. First, the icon next 
         to file1.txt (in the structured compare area) indicates that file1.txt 
         has an incoming change. This means a change was released to the server 
         which you need to take. Looking at file2.txt we can see a more ominous 
         red icon. This indicates that both yourself and the repository have changes 
         to the same file. This means that someone else (namely Fred) made changes 
-        to the same resource as the one you want to commit.</p>
-<p>The second thing worth noting is that the status bar has red text indicating
+        to the same resource as the one you want to commit.<p>The second thing worth noting is that the status bar has red text indicating
 what changes need to be considered.</p>
-<p><img align="texttop" border="0" src="../images/Image83_jane3_status.jpg" alt="Status line" width="379" height="27" >
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>7.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-Select file1.txt (the incoming change). The comparison viewer shows:&nbsp;
+<p><img align="texttop" border="0" src="../images/Image83_jane3_status.jpg" alt="Status line" width="379" height="27" ></li>
+  <li>Select file1.txt (the incoming change). The comparison viewer shows:&nbsp;
 <p><img align="texttop" border="0" src="../images/Image83_jane4.jpg" alt="Compare View" width="615" height="154">
-</TD>
-</TR>
-</TBODY>
-</TABLE>
+  </li>
+</ol>
 <P><a href="qs-64c_catch_sync_view.htm">
 <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
 Synchronize view</a>&nbsp;</P>
