--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync2.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync2.htm
@@ -11,76 +11,32 @@
 <h3> Updating</h3>
 <p CLASS="Para"> We will now use the Synchronize view to update our local resource 
   to the latest contents in the repository contents and to commit our changes.&nbsp;</p>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>1.</b>
-</P>
-</TD>
-    <TD valign="top" align="left"> Confirm that the Synchronize view is in Incoming 
+<ol>
+  <li>Confirm that the Synchronize view is in Incoming 
       Mode (#1). If not then press the Incoming Mode button on the local toolbar 
       (#2). 
       <p><img align="texttop" border="0" src="../images/Image83_jane5a.jpg" alt="Incoming mode" width="556" height="411" ></p>
-<p>&nbsp;
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-Select file1.txt (the incoming change). The comparison viewer shows that&nbsp;the
+  </li>
+  <li>Select file1.txt (the incoming change). The comparison viewer shows that&nbsp;the
 repository copy of file1.txt has a new line inserted (Fred-update).
-<p><img align="texttop" border="0" src="../images/Image83_jane4.jpg" alt="Text Compare" width="615" height="154" >
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>3.</b>
-</P>
-</TD>
-    <TD valign="top" align="left"> From the context menu of file1.txt choose Update. 
+<p><img align="texttop" border="0" src="../images/Image83_jane4.jpg" alt="Text Compare" width="615" height="154" ></li>
+  <li>
+<p CLASS="Para"> From the context menu of file1.txt choose Update. 
       This will cause your Workbench to be updated with the repository copy of 
-      file1.txt. </TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>4.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-Select file2.txt. The comparison viewer shows that&nbsp;the repository copy of
+      file1.txt. </p>
+  </li>
+  <li>Select file2.txt. The comparison viewer shows that&nbsp;the repository copy of
 file1.txt and our copy of file1.txt have both had the exact same line
 modified.&nbsp;
-<p><img align="texttop" border="0" src="../images/Image83_jane6a.jpg" alt="Text Compare" width="744" height="180" >
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>5.</b>
-</TD>
-<TD valign="top" align="left">
-If you are suspicious of the change you may want to find out some more information
+<p><img align="texttop" border="0" src="../images/Image83_jane6a.jpg" alt="Text Compare" width="744" height="180" ></li>
+  <li>If you are suspicious of the change you may want to find out some more information
 about the change. To do this you first need to figure out who made the change
 and why.
 <p>In the Navigator select file2.txt and choose Team &gt; Show in Resource
 History from the context menu.</p>
 <p><img align="texttop" border="0" src="../images/Image84_reshist.jpg" alt="Resource History" width="511" height="164" ></p>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>6.</b>
-</TD>
-    <TD valign="top" align="left"> In the Resource History view (see above) we 
+  </li>
+  <li>In the Resource History view (see above) we 
       can see there is a * next to version 1.7. This indicates 1.7 is currently 
       in our Workbench. Looking at the right pane of the text compare viewer (above) 
       we can see the repository contains 1.8 of file2.txt.&nbsp; 
@@ -90,36 +46,23 @@ Looks like it's time to ask Fred why he was changing file2.txt.&nbsp;</p>
 <p>If Fred had entered a meaningful description when releasing his changes,
 these descriptions would have appeared in the comment field of the Resource
 History view thereby providing us with some insight into the intent of the change.
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>7.</b>
-</TD>
-    <TD valign="top" align="left"> You can use the four copy buttons to help you 
+  </li>
+  <li>You can use the four copy buttons to help you 
       merge in conflicting changes made to the repository. 
       <p>
 For now we will assume that Fred's change turns out to be the right change.
       <p>Select file2.txt and choose Override and Update from the context menu. 
         When asked to confirm the replacement choose Yes. 
-      <p>&nbsp;</p>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>8.</b>
-</TD>
-    <TD valign="top" align="left"> The Update mode no longer has any remaining 
+      </li>
+  <li>The Update mode no longer has any remaining 
       incoming or conflicting changes.&nbsp; 
       <p>Looking at the status bar we can see there is still one remaining outgoing
 change to deal with.</p>
 <blockquote>
   <p><img align="texttop" border="0" src="../images/Image84_status.jpg" alt="Status bar" width="375" height="19" ></p>
 </blockquote>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
+  </li>
+</ol>
 <P><a href="qs-64c_catch_sync3_rel.htm">
 <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
 Committing</a>&nbsp;</P>
