--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync3_rel.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync3_rel.htm
@@ -11,52 +11,26 @@
 <h3> Committing</h3>
 <p CLASS="Para"> We will now use the Outgoing Mode of the Synchronize view to 
   commit the one remaining outgoing change.&nbsp;</p>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-  <THEAD> </THEAD> <TBODY> 
-  <TR> 
-    <TD valign="top" align="left"> 
-      <P CLASS="Para"> <b>1.</b> </P>
-    </TD>
-    <TD valign="top" align="left"> Place the Synchronize view into outgoing mode 
+<ol>
+  <li>Place the Synchronize view into outgoing mode 
       by clicking on the Outgoing Mode button (#1) and confirming that the title 
       of the view now indicates we are in Outgoing Mode (#2). 
       <p><img align="texttop" border="0" src="../images/Image84_relmode.jpg" width="440" height="125" alt="Outgoing mode"></p>
-      <p>&nbsp; 
-    </TD>
-  </TR>
-  <TR> 
-    <TD valign="top" align="left"> <b>2.</b> </TD>
-    <TD valign="top" align="left"> Select file3.txt (the outgoing change).&nbsp; 
-    </TD>
-  </TR>
-  <TR> 
-    <TD valign="top" align="left"> 
-      <P CLASS="Para"> <b>3.</b> </P>
-    </TD>
-    <TD valign="top" align="left"> The comparison viewer shows that&nbsp;our copy 
+      </li>
+  <li>Select file3.txt (the outgoing change).&nbsp; </li>
+  <li>The comparison viewer shows that&nbsp;our copy 
       of file3.txt has a change to the second line.&nbsp; The repository copy 
       is shown in the right pane. 
-      <p><img align="texttop" border="0" src="../images/Image84_jane.jpg" width="552" height="100" alt="Text compare">
-    </TD>
-  </TR>
-  <TR> 
-    <TD valign="top" align="left"> 
-      <P CLASS="Para"> <b>4.</b> </P>
-    </TD>
-    <TD valign="top" align="left"> From the context menu of file3.txt choose Commit. 
+      <p><img align="texttop" border="0" src="../images/Image84_jane.jpg" width="552" height="100" alt="Text compare"></li>
+  <li>From the context menu of file3.txt choose Commit. 
       Be sure to enter a meaningful description when prompted for one.&nbsp; 
       <p>Your Workbench copy is now committed into the repository.</p>
-    </TD>
-  </TR>
-  <TR> 
-    <TD valign="top" align="left"> 
-      <P CLASS="Para"> <b>5.</b> </P>
-    </TD>
-    <TD valign="top" align="left"> At this point Fred may want to Synchronize 
-      with the repository to catch up to the changes you just committed. </TD>
-  </TR>
-  </TBODY> 
-</TABLE>
+    </li>
+  <li>
+<p CLASS="Para"> At this point Fred may want to Synchronize 
+      with the repository to catch up to the changes you just committed.</p>
+  </li>
+</ol>
 <P>We have successfully collaborated with Fred by making simultaneous changes 
   to the same project. The Synchronization view&nbsp; and CVS Repository History 
   view allowed us to determine the specific changes each user was making and to 
