--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-70_replace.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-70_replace.htm
@@ -11,70 +11,30 @@
 <h3>
 Replacing</h3>
 <p CLASS="Head"> Suppose after further reflection we realize that the revision 
-  of file1.txt that we just received is incorrect and in fact we want an earlier 
-  revision. You can replace a Workbench resource with an earlier revision of the 
-  resource from the repository. To rollback to an earlier revision we can&nbsp; 
-  proceed as follows:</p>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-In the Navigator view select the file1.txt</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+of file1.txt that we just received is incorrect and in fact we want an earlier 
+revision. You can replace a Workbench resource with an earlier revision of the 
+resource from the repository. To rollback to an earlier revision:</p>
+<ol>
+  <li>
+<p CLASS="Head"> In the Navigator view select the file1.txt</p>
+  </li>
+  <li>
       <P CLASS="Para"> From the file's context menu, select Replace With &gt; 
         Revision...</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
       <P CLASS="Para"> In the replace with revision Compare editor that opens, 
         choose the original (bottom-most) revision and, from the popup menu choose 
         Get Contents.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>4.</b>
-</TD>
-    <TD valign="top" align="left"> Open the preferences (Window &gt; Preferences) 
-      and turn on the CVS label decorations (on page Workbench &gt; Label Decorations 
-      and ensure CVS is checked).
+  </li>
+  <li>Open the preferences (Window &gt; Preferences) and turn on the CVS label 
+  decorations (on page Workbench &gt; Label Decorations and ensure CVS is checked).
 <p><img align="texttop" border="0" src="../images/Image84_decorator_preference.jpg" alt="Decorator Preference" width="605" height="529"></p>
       <p>Observe that the Navigator updates to show the CVS state of a resource. 
         Notice that the modified file is preceded by &quot;&gt; (see #1) indicating 
         that we have changed file1.txt (by replacing it with the earlier version).&nbsp;</p>
-      <p><img align="texttop" border="0" src="../images/Image84_replace2.jpg"  alt="File selection" width="220" height="133">
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>5.</b>
-</TD>
-    <TD valign="top" align="left"> Now that we have finished our coffee we realize 
+      <p><img align="texttop" border="0" src="../images/Image84_replace2.jpg"  alt="File selection" width="220" height="133"></li>
+  <li>Now that we have finished our coffee we realize 
       that this older revision is not as good as it initially seemed and in fact 
       the revision in the repository is better after all.&nbsp; 
       <p>Instead of choosing Team &gt; Synchronize with Repository, let's choose 
@@ -82,10 +42,8 @@ In the Navigator view select the file1.txt</P>
       <p>Observe that file1.txt is updated to be the contents from the repository, 
         and that the leading indicator &quot;&gt;&quot; has been removed since 
         we now have the same revision as the repository. 
-    </TD>
-</TR>
-</TBODY>
-</TABLE>
+    </li>
+</ol>
 <P>We have seen how to synchronize with the repository, replace with revision 
   or replace with the latest from the repository. You can also compare with these 
   revisions/versions in a similar manner by choosing the&nbsp; Compare With menu 
