--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-74_version.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-74_version.htm
@@ -17,76 +17,23 @@ Versioning your project</h3>
   our files the only information we needed to supply was a commit comment.&nbsp;</P>
 <P CLASS="Para">To version our
 project proceed as follows:</P>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P>
-Select the project JanesTeamProject.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-      <P> In the Navigator view select Team &gt; Tag as Version...</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-      <P>When the Tag Resources dialog opens enter the version name A1 and click 
-        OK.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-4.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-      <P> Select the CVS Repositories view.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-5.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-      <P>Expand Versions, and JanesTeamProject. Observe that under JaneTeamProject there 
+<ol>
+  <li>
+<P CLASS="Para">Select the project JanesTeamProject.</P>
+  </li>
+  <li>In the Navigator view select Team &gt; Tag as Version...</li>
+  <li>When the Tag Resources dialog opens enter the version name A1 and click 
+        OK.</li>
+  <li>Select the CVS Repositories view.</li>
+  <li>Expand Versions, and JanesTeamProject. Observe that under JaneTeamProject there 
         is now a version of this project whose version number is A1. Looking closely 
         at the contents of folder1 you can also see that the version numbers of 
-        the individual files match the version numbers in our Workbench.</P>
-<blockquote>
+        the individual files match the version numbers in our Workbench.<blockquote>
   <p><img align="texttop" border="0" src="../images/Image85_version2.jpg" alt="Repositories View and Navigator View" width="333" height="417"></p>
 </blockquote>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
-<P><br>
+  </li>
+</ol>
+<P>
 <a href="qs-74_review.htm">
 <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
 A quick review</a>&nbsp;</P>
