--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40b.htm
@@ -18,70 +18,34 @@ still has the Navigator view and looks like this:</p>
 <blockquote>
   <p CLASS="Head"><img align="texttop" border="0" src="../images/Image60_fast_view1.jpg" alt="Fast view on shortcut bar" width="70" height="168"></p>
 </blockquote>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+<ol>
+  <li>
 <P CLASS="Para">In the shortcut bar click on the Navigator fast view button.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Observe the Navigator view slides out from the shortcut bar.&nbsp; </P>
 <P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image61_nav_fast.jpg" alt="Navigator view" width="376" height="283"> </P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-You can use the Navigator fast view as you would normally.&nbsp;&nbsp;To resize
+<img align="texttop" border="0" src="../images/Image61_nav_fast.jpg" alt="Navigator view" width="376" height="283"></P>
+  </li>
+  <li>
+  <p CLASS="Head">You can use the Navigator fast view as you would normally.&nbsp;&nbsp;To resize
 a fastview, move the mouse to the right edge of the fastview where the cursor
 will change to a double-headed arrow. Then hold the left
-mouse button down as you move the mouse. </P>
-</TD>
-</TR>
-<tr>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>4.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+mouse button down as you move the mouse. </p>
+  </li>
+  <li>
 <P CLASS="Para">
 To hide the fast view simply click on another view or editor or click on the Minimize button on
 the fast view's toolbar </P>
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/Image61_fast_minimize.jpg" alt="Minimize fast icon" width="242" height="73"> </P>
 <P CLASS="Para">&nbsp; </P>
-<P CLASS="Para">Note: If you open a file from the Navigator fast view, the fast
-view will automatically hide itself to allow you to work with the
-file.&nbsp;&nbsp; </P>
-<P CLASS="Para">&nbsp; </P>
-</TD>
-</tr>
-</TBODY>
-</TABLE>
-<P>&nbsp;To convert a fast view back to a regular view you can either:
+<P CLASS="Para"><b>Note:</b> If you open a file from the Navigator fast view, 
+the fast view will automatically hide itself to allow you to work with the file.</P>
+  </li>
+</ol>
+<P>To convert a fast view back to a regular view you can either:
 </P>
 
 
