--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43e.htm
@@ -13,39 +13,18 @@ perspectives</h3>
 <P CLASS="Para">In this tutorial we have seen how to add new views to our
 perspective, rearrange the views and convert views into fast views. The
 Workbench also allows you to save this layout for future use.</P>
-<table BORDER="0" cellspacing="0" cellpadding="3">
-  <thead>
-  </thead>
-  <tbody>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>1.</b></p>
-      </td>
-      <td valign="top" align="left">
-        <p CLASS="Para">In the shortcut bar click on the Resource perspective.&nbsp;The
-        Resource perspective is now active.</p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>2.</b></td>
-      <td valign="top" align="left">
-        <p CLASS="Para">Drag the Outline view and stack it with the Navigator view.</td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>3.</b></p>
-      </td>
-      <td valign="top" align="left">
+<ol>
+  <li>
+        <p CLASS="Para">In the shortcut bar click on the Resource 
+        perspective.&nbsp;The Resource perspective is now active.</p>
+      </li>
+  <li>
+        <p CLASS="Para">Drag the Outline view and stack it with the Navigator view.</li>
+  <li>
         <p CLASS="Para">Choose Window
         &gt; Save Perspective As...&nbsp;</p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>4.</b></p>
-      </td>
-      <td valign="top" align="left">
+      </li>
+  <li>
         <p CLASS="Para">The Save Perspective As dialog
         allows you to redefine and existing perspective or create a new perspective.
         <p CLASS="Para">Click OK to update the Resource perspective and Yes to the subsequent
@@ -54,96 +33,51 @@ Workbench also allows you to save this layout for future use.</P>
         <blockquote>
           <p CLASS="Para"><img align="texttop" border="0" src="../images/Image71_pers_save.jpg" alt="Saving Perspective" width="272" height="401"></p>
         </blockquote>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>5.</b></p>
-      </td>
-      <td valign="top" align="left">
-        <p CLASS="Para">In the Resource perspective move
-        the Outline view so that it is now stacked with the Tasks view.</p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>6.</b></p>
-      </td>
-      <td valign="top" align="left">
+      </li>
+  <li>
+<P CLASS="Para">In the Resource perspective move
+        the Outline view so that it is now stacked with the Tasks view.</P>
+  </li>
+  <li>
         <p CLASS="Para">Choose Window &gt; Reset Perspective.
         Notice the Outline view is stacked with the Navigator. Originally
         when we first started the Workbench it was below the Navigator,
         but because we saved the perspective with Repositories and Outline
         stacked, it now considers this its initial layout.&nbsp;&nbsp;</p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>7.</b></p>
-      </td>
-      <td valign="top" align="left">
-        <p CLASS="Para">Choose Window &gt; New Window to open a second window
+      </li>
+  <li>
+<P CLASS="Para">Choose Window &gt; New Window to open a second window
         showing the resource perspective. Observe that it uses the
-        newly saved layout.&nbsp;</p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>8.</b></p>
-      </td>
-      <td valign="top" align="left">
-        <p CLASS="Para">Close the second window.</p>
-      </td>
-    </tr>
-  </tbody>
-</table>
+        newly saved layout.&nbsp;</P>
+  </li>
+  <li>
+<P CLASS="Para">Close the second window.</P>
+  </li>
+</ol>
 <p CLASS="Para">Now that we have forever changed our Resource perspective you're
 probably hoping there is some way to get back the original layout. To reset the
-Resource perspective to its original layout proceed as follows:</p>
-<table BORDER="0" cellspacing="0" cellpadding="3">
-  <thead>
-  </thead>
-  <tbody>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>1.</b></p>
-      </td>
-      <td valign="top" align="left">
-        <p CLASS="Para">Choose Window &gt; Preferences&nbsp;&nbsp;</p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>2.</b></td>
-      <td valign="top" align="left">
-        <p CLASS="Para">Expand Workbench and choose Perspectives.</td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>3.</b></p>
-      </td>
-      <td valign="top" align="left">
+Resource perspective to its original layout:</p>
+<ol>
+  <li>
+        <p CLASS="Para">Choose Window &gt; Preferences.</p>
+      </li>
+  <li>
+        <p CLASS="Para">Expand Workbench and choose Perspectives.</p>
+      </li>
+  <li>
         <p CLASS="Para">Select the Resource
         perspective and click the Reset button and then Click OK.
         <blockquote>
-        <p CLASS="Para"><img align="texttop" border="0" src="../images/Image71_pers_reset.jpg" alt="Reset Perspective" width="512" height="553">
-        </blockquote>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>4.</b></p>
-      </td>
-      <td valign="top" align="left">
-        <p CLASS="Para">We have undone any changes to
+        <p CLASS="Para"><img align="texttop" border="0" src="../images/Image71_pers_reset.jpg" alt="Reset Perspective" width="512" height="553"></blockquote>
+      </li>
+  <li>
+<p CLASS="Para">We have undone any changes to
         the saved state
         of the perspective. If we also want to
         update the current copy of the Resource perspective that we are working
         with we must also choose Window &gt; Reset Perspective from the Workbench's menubar.&nbsp;</p>
-      </td>
-    </tr>
-  </tbody>
-</table>
+  </li>
+</ol>
 <P><a href="qs-43f.htm">
 <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
 Configuring perspectives</a>&nbsp;</P>
