--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52.htm
@@ -17,33 +17,17 @@ in a special compare editor. </P>
 <P CLASS="Para">Before we get started with compare we need to create a few
 files. This will also be a good time to recap some of the basic features we have
 already learned about. </P>
-<table BORDER="0" cellspacing="0" cellpadding="3">
-  <thead>
-  </thead>
-  <tbody>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>1.</b></p>
-      </td>
-      <td valign="top" align="left">
+<ol>
+  <li>
         <p CLASS="Para">Start by selecting all of the projects in the Navigator
         and deleting them by using Delete on the popup menu.</p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>2.</b></td>
-      <td valign="top" align="left">
+      </li>
+  <li>
         <p CLASS="Para">Create a new simple project using File &gt; New &gt;
         Project.... Be sure to give the project a distinct name&nbsp; by typing
         your name as the name of your new project (e.g., &quot;JaneQUserCompare&quot;).
-        Do not use spaces or special characters in the project name.</td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>3.</b></p>
-      </td>
-      <td valign="top" align="left">
+        Do not use spaces or special characters in the project name.</li>
+  <li>
         <p CLASS="Para">Use the project's popup menu to create a file called
         file1.txt.</p>
         <p CLASS="Para">In the editor for file1.txt type the following lines of
@@ -55,26 +39,14 @@ already learned about. </P>
           This is line 4.<br>
           This is line 5.</i></p>
         </blockquote>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>4.</b></p>
-      </td>
-      <td valign="top" align="left">
+      </li>
+  <li>
         <p CLASS="Para">In the Navigator select
-        file1.txt and use Ctrl+C to copy the file.</td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>5.</b></p>
-      </td>
-      <td valign="top" align="left">
+        file1.txt and use Ctrl+C to copy the file.</li>
+  <li>
         <p CLASS="Para">Use Ctrl+V (Paste) to create the copy. In the name
-        conflict dialog which appears, rename the file to be file2.txt.</td>
-    </tr>
-  </tbody>
-</table>
+        conflict dialog which appears, rename the file to be file2.txt.</li>
+</ol>
 <P>We now have two files, file1.txt and file2.txt that are identical. It's time
 to have some fun with the compare feature.
 </P>
