--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-55.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-55.htm
@@ -13,119 +13,52 @@ Local history</h2>
 <P CLASS="Para">
 Every time you save an editable file in the Workbench, the Workbench updates the local history of that file and logs the changes that you have made to it. You can then access the local history of a file and revert to a
 previously saved copy of the file, as long as the desired state is recent enough in the save history.</P>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
+<ol>
+  <li>
 <P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-Create a new file named sampleFile.txt</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+Create a new file named sampleFile.txt.</P>
+  </li>
+  <li>
 <P CLASS="Para">
 In the editor for sampleFile.txt modify the resource by adding the line
 &quot;change1&quot; and saving the file.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>3.</b>
-</TD>
-<TD valign="top" align="left">
-Repeat this by entering a new line &quot;change2&quot; and saving it again.
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>4.</b>
-</TD>
-<TD valign="top" align="left">
-Add
-a third line &quot;change3&quot; and save it again.
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>5.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>Repeat this by entering a new line &quot;change2&quot; and saving it again.
+  </li>
+  <li>Add
+a third line &quot;change3&quot; and save it again. </li>
+  <li>
 <P CLASS="Para">
 From the resource's context menu in the Navigator view, select Replace With &gt; Local History.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>6.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">The Replace from Local History dialog opens and shows the
+  </li>
+  <li>
+<P CLASS="Para">The Replace from Local History dialog opens and shows the 
 previous local history&nbsp; of the file.</P>
 <P CLASS="Para">&nbsp;<img align="texttop" border="0" src="../images/Image81_local.jpg" alt="Local history" width="558" height="388"></P>
 <P CLASS="Para">The left pane of the dialog contains the Workbench's copy of the
 file. In the figure below we can see the Workbench contains the copy with all 3
 lines - the same copy that is currently shown in the editor area of the
-Workbench.&nbsp;</P>
+Workbench.&nbsp;<br>
+&nbsp;</P>
 <P CLASS="Para">The first item in the local history (see below) contains the
 last saved copy of the file. This is the one with only two lines of text. The
-bottommost entry in the tree is the first copy of the file.</P>
+bottommost entry in the tree is the first copy of the file.<br>
+&nbsp;</P>
 <P CLASS="Para">The bottom area of the dialog allows us to see the differences
 between the Workbench file and the specific copy of the file selected in the
 local history.&nbsp;&nbsp;</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>7.</b>
-</TD>
-<TD valign="top" align="left">
-Select the first item (shown above) in the local history. The right pane should
-show one line of text.&nbsp;
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>8.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>Select the first item (shown above) in the local history. The right pane should
+show one line of text.&nbsp; </li>
+  <li>
 <P CLASS="Para">Click Replace. This replaces the Workbench's copy of
 sampleFile.txt with the chosen local history item.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>9.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">Observe that the sampleFile.txt editor now contains two
 lines.&nbsp;</P>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
-<P>&nbsp;</P>
+  </li>
+</ol>
 
 
 <P><a href="qs-55b.htm">
