--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64b_fredmod.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64b_fredmod.htm
@@ -19,19 +19,8 @@ Another user making changes</h3>
   <li>Fred will synchronize and commit his (outgoing) changes to the two files.</li>
 </ul>
 <p CLASS="Para">Fred should proceed as follows:</p>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-Modify file1.txt as follows
+<ol>
+  <li>Modify file1.txt as follows
 <p>Original Contents:</p>
 <blockquote>
   <p><i>This is the contents<br>
@@ -43,17 +32,8 @@ Modify file1.txt as follows
     <b>Fred-update&nbsp; </b><br>
     of file 1.</i></p>
 </blockquote>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-Modify file2.txt as follows
+  </li>
+  <li>Modify file2.txt as follows
 <p>Original Contents:</p>
 <blockquote>
   <p><i>File2 is a small file<br>
@@ -64,37 +44,22 @@ Modify file2.txt as follows
   <p><i>File2 is a (<b>Fred was here) </b>small file<br>
   with simple text.&nbsp;</i></p>
 </blockquote>
-<p CLASS="Para">&nbsp;
-
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-      <P CLASS="Para">Open the preferences (Window &gt; Preferences) and turn 
-        on the CVS label decorations (on page Workbench &gt; Label Decorations 
-        check off CVS).</P>
+  </li>
+  <li>
+      <P CLASS="Para">Open the preferences (Window &gt; Preferences) and turn on 
+      the CVS label decorations (on page Workbench &gt; Label Decorations check off 
+      CVS).</P>
 <blockquote>
   <P CLASS="Para"><img align="texttop" border="0" src="../images/Image84_decorator_preference.jpg" alt="Navigator View" width="605" height="529" ></P>
 </blockquote>
       <P CLASS="Para">Observe that the Navigator updates to show the CVS state 
-        of a resource. Notice that the two files which Fred has changed are preceded 
-        by &quot;&gt;&quot;.</P>
+      of a resource. Notice that the two files which Fred has changed are 
+      preceded by &quot;&gt;&quot;.</P>
 <blockquote>
   <P CLASS="Para"><img align="texttop" border="0" src="../images/Image83_fred_verson.jpg" alt="Navigator View" width="235" height="140" >&nbsp;</P>
 </blockquote>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>4.</b>
-</TD>
-    <TD valign="top" align="left"> To commit his changes to the repository Fred 
+  </li>
+  <li>To commit his changes to the repository Fred 
       can either: 
       <ul>
         <li>select the two files and choose Team &gt; Synchronize with Repository 
@@ -104,17 +69,10 @@ Modify file2.txt as follows
       <p>Often choosing the project is the easiest thing to do. Let's do just that. 
         Select the project and choose Team &gt; Synchronize with Repository from 
         its context menu.&nbsp;</p>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>5.</b>
-</TD>
-    <TD valign="top" align="left"> When the Synchronize view opens Fred should 
-      commit his changes to file1.txt and file2.txt. </TD>
-</TR>
-</TBODY>
-</TABLE>
+  </li>
+  <li>When the Synchronize view opens Fred should 
+      commit his changes to file1.txt and file2.txt. </li>
+</ol>
 <P><a href="qs-64c_catch_mod.htm">
 <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
 Making our own changes</a>&nbsp;</P>
